<resources>
    <string name="app_name">AttendanceChecking</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="name">姓名:</string>
    <string name="password">密码:</string>
    <string name="punch_card">考勤</string>
    <string name="punch_card_on_work">上班打卡</string>
    <string name="punch_card_off_work">下班打卡</string>
    <string name="record">记录</string>
    <string name="list_personal">查看个人信息</string>
    <string name="list_all">查看所有信息</string>
</resources>
