<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.sdju.attendancechecking.CheckAttendance">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/punch_card" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/punch_card_on_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_card_on_work" />

            <Button
                android:id="@+id/punch_card_off_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_card_off_work" />

            <Button
                android:id="@+id/list_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_personal" />

        </LinearLayout>

        <TextView
            android:id="@+id/list_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
